Return hack for incremental compilation for kotlin
`-P` argument is not present in alpine, but it's actually not needed, we won't extract this so the leading `/` is not crucial.
`--add-opens` was removed from java.