@@ -13,12 +13,11 @@ jarFile="$HOME/.cache/codecrafters-git-kotlin.jar"
 
 # Kotlin doesn't do incremental compilation, so let's hack this in ourselves.
 previousHash=$(cat "$cacheFile" 2>/dev/null || echo '')
-currentHash=$(tar -cP "$(dirname "$0")/app" | openssl sha1)
+currentHash=$(tar -c "$(dirname "$0")/app" | sha1sum)
 
 if [ "$previousHash" != "$currentHash" ]
 then
-  # The JAVA_OPTS here prevents a warning on 1.4, see: https://youtrack.jetbrains.com/issue/KT-43704#focus=Comments-27-4625141.0-0
-  JAVA_OPTS="--add-opens java.base/java.util=ALL-UNNAMED" kotlinc "$(dirname $0)/app/main.kt" -include-runtime -d "$jarFile"
+  kotlinc "$(dirname $0)/app/main.kt" -include-runtime -d "$jarFile"
   echo "$currentHash" > "$cacheFile"
 fi
 
